# hackerrank-orchestrate-june26

./: .env.example  .gitignore  AGENTS.md  README.md  check_categories.py  pyproject.toml  requirements.txt  run_pipeline.sh
evaluation/: evaluation_report.md
research/: HACKATHON_REQUIREMENTS.md  PROS_CONS.md  STRATEGY.md
scripts/: debug_claim.py  download_datasets.py  evaluate.py  prepare_yolo_dataset.py  preprocess.py  run_ensemble_inference.py  run_inference.py  run_integrated_inference.py  train_mobilenet.py  train_mobilenet_v2.py  train_yolo.py
slurm/: debug_user045.sh  download_datasets.sh  inference_ensemble.sh  inference_ensemble_v32.sh  inference_integrated.sh  inference_sample.sh  train_mobilenet.sh  train_mobilenet_optA.sh  train_mobilenet_v2.sh  train_yolo.sh
src/: README.md
src/hackerrank_orchestrate/: __init__.py  adjudicator.py  classifier_integration.py  config.py  evidence_evaluator.py  localization.py  perception.py  yolo_detector.py
src/hackerrank_orchestrate/data/: dataset_loader.py  preprocessor.py  roboflow_downloader.py
src/hackerrank_orchestrate/evaluation/: metrics.py
src/hackerrank_orchestrate/models/: mobilenet_classifier.py  qwen_inference.py
src/hackerrank_orchestrate/utils/: __init__.py  logger.py
tests/: test_config.py  test_data_loader.py  test_inference_parser.py  test_integration.py  test_label_normalizer.py  test_mobilenet.py  test_three_stage_pipeline.py
yolo_data/: data.yaml
yolo_data/labels/train/: img_1.txt  img_2.txt
