[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackerrank-orchestrate"
version = "0.1.0"
description = "Multi-Modal Evidence Review for HackerRank Orchestrate"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
    "accelerate>=0.25.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
    "roboflow>=1.1.0",
    "datasets>=2.14.0",
    "scikit-learn>=1.3.0",
    "ultralytics>=8.0.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"hackerrank_orchestrate" = ["*.txt", "*.json"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
